--- a/Main/config.json
+++ b/Main/config.json
@@ -1,7 +1,7 @@
 {
     "tasks": [
-        {"name": "basic_join", "path": "Rulewerk_Rules/basic_joins"},
+        {"name": "basic_join", "path": "Rulewerk_Rules/basic_join"},
         {"name": "basic_projection", "path": "Rulewerk_Rules/basic_projection"}
     ] ,
-    "solvers": ["rulewerk", "clingo"] 
+    "solvers": ["rulewerk", "clingo", "souffle"]
 }
