--- a/Main/config.json
+++ b/Main/config.json
@@ -5,8 +5,7 @@
         {"name": "basic_union", "path": "Rulewerk_Rules/basic_union"},
         {"name": "load_multiple", "path": "Rulewerk_Rules/load_multiple"},
         {"name": "repeated_variables", "path": "Rulewerk_Rules/repeated_variables"},
-        {"name": "symmetric_transitive_closure", "path": "Rulewerk_Rules/symmetric_transitive_closure"},
-        {"name": "all_rulewerk_basics", "path": "Rulewerk_Rules"}
+        {"name": "symmetric_transitive_closure", "path": "Rulewerk_Rules/symmetric_transitive_closure"}
     ] ,
-    "solvers": ["rulewerk"]
+    "solvers": ["souffle"]
 }
