--- a/Main/Makefile
+++ b/Main/Makefile
@@ -1,6 +1,6 @@
 .PHONY: install-requirements
 install-requirements:
-	pip install -r ./requirements.txt
+	pip install -r ./requirements.txt ; conda install -c conda-forge clingo=5.6.2
 
 
 .PHONY: black
