--- a/Main/config.json
+++ b/Main/config.json
@@ -1,6 +1,7 @@
 {
     "tasks": [
-        {"name": "doctors1m", "path": "Rulewerk_Rules/doctors1m"}
+        {"name": "basic_union", "path": "Rulewerk_Rules/basic_union"},
+        {"name": "basic_join", "path":"Rulewerk_Rules/basic_join"}
     ] ,
     "solvers": ["nemo"]
 }
