--- a/Main/Makefile
+++ b/Main/Makefile
@@ -1,7 +1,7 @@
 .PHONY: install-requirements
 install-requirements:
-	pip install -r ./requirements.txt ; conda install -c conda-forge clingo=5.6.2
-
+	# pip install -r ./requirements.txt ; conda install -c conda-forge clingo=5.6.2
+	pip install -r ./requirements.txt
 
 .PHONY: black
 black:
