memusage stdout(w/o histogram part) write to txt file.

--- a/Main/config.json
+++ b/Main/config.json
@@ -3,5 +3,5 @@
         {"name": "basic_union", "path": "Rulewerk_Rules/basic_union"},
         {"name": "basic_join", "path":"Rulewerk_Rules/basic_join"}
     ] ,
-    "solvers": ["nemo"]
+    "solvers": ["clingo"]
 }
