Store mem_usage results in one single csv file. (multiple rls files allowed)

--- a/Main/config.json
+++ b/Main/config.json
@@ -1,6 +1,6 @@
 {
     "tasks": [
-        {"name": "basic_join", "path":"Rulewerk_Rules/basic_join"}
+        {"name": "basics", "path":"Rulewerk_Rules"}
     ] ,
-    "solvers": ["nemo", "clingo"]
+    "solvers": ["nemo"]
 }
